<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.android_homebrew.activities.HomebrewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/purple" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <EditText
                android:id="@+id/homebrewName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_homebrewName"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/homebrewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewStyle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewDate"
                android:inputType="date"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewABV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewABV"
                android:inputType="numberDecimal"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewBoil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewBoil"
                android:inputType="number"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewMalt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewMalt"
                android:inputType="text"
                android:maxLength="60"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/homebrewHop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewHop"
                android:inputType="text"
                android:maxLength="60"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewYeast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewYeast"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewTOG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewTOG"
                android:inputType="numberDecimal"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewTFG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewTFG"
                android:inputType="numberDecimal"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewAOG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewAOG"
                android:inputType="numberDecimal"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewAFG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewAFG"
                android:inputType="numberDecimal"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homebrewFT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_homebrewFT"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/red"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addHomebrew"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/red"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_delHomebrew"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>